# pialign

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
script/: aer.pl  countnull.pl  extractlex.pl  extractterminals.pl  itgstats.pl  lexicalize-pt.pl  likelihood.pl  make-moses-config.pl  mergephrases.pl  model1.pl  orig2line.pl  phrase-extract.pl  removezerophrase.pl  reversealign.pl  time.pl  visualize.pl
src/: Makefile.in
src/include/: Makefile.am  Makefile.in
src/include/gng/: counter.h  samp-gen.h  string.h  symbol-map.h  symbol-set.h  symbol-trie.h  trie.h
src/include/pialign/: base-compound.h  base-measure.h  base-model1.h  base-phrasecooc.h  base-unigram.h  config.h  config.h.in  definitions.h  dirichletdist.h  esa.hxx  look-base.h  look-ind.h  look-none.h  model-base.h  model-flat.h  model-hier.h  model-length.h  parse-chart.h  pialign.h  prob-flat.h  prob-hier.h  prob-length.h  prob-model.h  pydist.h
src/include/port/: port.h
src/lib/: Makefile.am  Makefile.in  base-compound.cc  base-model1.cc  base-phrasecooc.cc  base-unigram.cc  definitions.cc  model-flat.cc  model-hier.cc  model-length.cc  parse-chart.cc  pialign.cc
src/test/: Makefile.am  maintest-pialign.cc  maintest-trie.cc
