AM_CPPFLAGS = $(BOOST_CPPFLAGS) $(PTHREAD_FLAGS) 

SUBDIRS = src

dist_pkglibexec_SCRIPTS = \
script/aer.pl \
script/countnull.pl \
script/extractlex.pl \
script/extractterminals.pl \
script/itgstats.pl \
script/lexicalize-pt.pl \
script/likelihood.pl \
script/mergephrases.pl \
script/model1.pl \
script/orig2line.pl \
script/phrase-extract.pl \
script/removezerophrase.pl \
script/reversealign.pl \
script/time.pl \
script/visualize.pl
