SUBDIRS = src
AUTOMAKE_OPTIONS = foreign

dist_pkglibexec_SCRIPTS = \
script/aer.pl \
script/countnull.pl \
script/extractlex.pl \
script/extractterminals.pl \
script/itgstats.pl \
script/lexicalize-pt.pl \
script/likelihood.pl \
script/mergephrases.pl \
script/model1.pl \
script/orig2line.pl \
script/phrase-extract.pl \
script/removezerophrase.pl \
script/reversealign.pl \
script/time.pl \
script/make-moses-config.pl \
script/visualize.pl
