nobase_include_HEADERS = pialign/base-measure.h pialign/base-model1.h \
    pialign/base-unigram.h pialign/definitions.h pialign/dirichletdist.h \
    pialign/parse-chart.h pialign/pialign.h pialign/prob-flat.h \
    pialign/prob-hier.h pialign/prob-length.h pialign/prob-model.h \
    pialign/pydist.h gng/counter.h gng/samp-gen.h gng/string.h \
    gng/symbol-map.h gng/symbol-set.h 
