nobase_include_HEADERS = pialign/base-measure.h pialign/base-model1.h \
    pialign/base-unigram.h pialign/definitions.h pialign/dirichletdist.h \
    pialign/parse-chart.h pialign/pialign.h pialign/model-flat.h \
    pialign/model-hier.h pialign/model-length.h pialign/model-base.h \
    pialign/pydist.h pialign/config.h gng/counter.h gng/samp-gen.h gng/string.h \
    gng/symbol-map.h gng/symbol-set.h 
