nobase_include_HEADERS = pialign/base-compound.h pialign/look-base.h pialign/model-hier.h pialign/sais.hxx pialign/base-measure.h pialign/look-ind.h pialign/model-length.h pialign/base-model1.h pialign/definitions.h pialign/look-none.h pialign/parse-chart.h pialign/base-phrasecooc.h pialign/dirichletdist.h pialign/model-base.h pialign/pialign.h pialign/base-unigram.h pialign/esa.hxx pialign/model-flat.h pialign/pydist.h pialign/config.h gng/counter.h gng/samp-gen.h gng/symbol-map.h gng/symbol-trie.h gng/dda.h gng/string.h gng/symbol-set.h gng/trie.h
