PIACPP = pialign.cc model-length.cc model-hier.cc model-flat.cc parse-chart.cc base-model1.cc base-unigram.cc base-phrasecooc.cc base-compound.cc definitions.cc


AM_CPPFLAGS = -I$(srcdir)/../include

lib_LTLIBRARIES = libpialign.la

libpialign_la_SOURCES = ${PIACPP}
libpialign_la_LDFLAGS = -version-info 0:0:0
