
AM_CPPFLAGS = -I$(srcdir)/../include

bin_PROGRAMS = test-pialign test-trie

test_pialign_SOURCES = maintest-pialign.cc
test_pialign_LDADD = ../lib/libpialign.la

test_trie_SOURCES = maintest-trie.cc
# test_trie_LDADD = ../lib/libtrie.la

# itghiero_SOURCES = itghiero.cc
# itghiero_LDADD = ../lib/libitghiero.la
